--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "service-centre",
-  "version": "0.1.0",
+  "name": "anicatsite",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinescope/react-kinescope-player": "git+https://github.com/kinescope/react-kinescope-player.git",
     "chart.js": "^4.4.7",
+    "hls.js": "^1.6.2",
     "js-cookie": "^3.0.5",
-    "next": "15.0.3",
+    "lucide-react": "^0.503.0",
+    "next": "15.2.4",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/hls.js": "^0.13.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
