--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@hcaptcha/react-hcaptcha": "^1.12.1",
     "@kinescope/react-kinescope-player": "git+https://github.com/kinescope/react-kinescope-player.git",
+    "caniuse-lite": "^1.0.30001759",
     "chart.js": "^4.4.7",
     "discord-rpc": "^4.0.1",
     "hls.js": "^1.6.2",
@@ -59,6 +60,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.8.32",
     "concurrently": "^9.2.0",
     "electron": "^37.2.1",
     "electron-builder": "^26.0.12",
