--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jwt-decode": "^4.0.0",
     "keytar": "^7.9.0",
     "lucide-react": "^0.503.0",
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "19.0.0-rc-66855b96-20241106",
